--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="https://api.map.baidu.com/api?v=3.0&amp;ak=5tvPbrYNfwc2gK0FFaFGsFsRqi9FIM3F"></script>
+<!DOCTYPE html><html><head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<script src="https://api.map.baidu.com/api?v=3.0&amp;ak=5tvPbrYNfwc2gK0FFaFGsFsRqi9FIM3F"></script>
 </head>
-
 <body>
-  <div id="root"></div>
-  <script src="/my-map/umi.js"></script>
+<div id="root"></div>
+<script src="/umi.js"></script>
 
-</body>
-
-</html>
+</body></html>
